[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menus/Console-Pc/Console_Bottom_HUD.gd" type="Script" id=1]
[ext_resource path="res://misc/line-text.tres" type="DynamicFont" id=2]

[node name="Console_Bottom_HUD" type="HBoxContainer"]
margin_top = 998.0
margin_right = 1912.0
margin_bottom = 1261.0
script = ExtResource( 1 )

[node name="VBoxContainer7" type="VBoxContainer" parent="."]
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank7" type="Label" parent="VBoxContainer7"]
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_7" type="Label" parent="VBoxContainer7"]
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "player 7"
align = 1

[node name="Label_ready7" type="Label" parent="VBoxContainer7"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "ready!"
align = 1

[node name="Label_Select7" type="Label" parent="VBoxContainer7"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1

[node name="Label_press_start7" type="Label" parent="VBoxContainer7"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer7"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer5" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 244.0
margin_right = 484.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank5" type="Label" parent="VBoxContainer5"]
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_5" type="Label" parent="VBoxContainer5"]
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "player 5"
align = 1

[node name="Label_ready5" type="Label" parent="VBoxContainer5"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "ready!"
align = 1

[node name="Label_Select5" type="Label" parent="VBoxContainer5"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1

[node name="Label_press_start5" type="Label" parent="VBoxContainer5"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer5"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 488.0
margin_right = 728.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank3" type="Label" parent="VBoxContainer3"]
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_3" type="Label" parent="VBoxContainer3"]
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "player 3"
align = 1

[node name="Label_ready3" type="Label" parent="VBoxContainer3"]
visible = false
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "ready!"
align = 1

[node name="Label_Select3" type="Label" parent="VBoxContainer3"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1

[node name="Label_press_start3" type="Label" parent="VBoxContainer3"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer3"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer1" type="VBoxContainer" parent="."]
margin_left = 732.0
margin_right = 972.0
margin_bottom = 263.0
size_flags_horizontal = 3

[node name="Label_blank1" type="Label" parent="VBoxContainer1"]
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_1" type="Label" parent="VBoxContainer1"]
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "player 1"
align = 1

[node name="Label_ready1" type="Label" parent="VBoxContainer1"]
visible = false
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "ready!"
align = 1

[node name="Label_Select1" type="Label" parent="VBoxContainer1"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1

[node name="Label_press_start1" type="Label" parent="VBoxContainer1"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer1"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 976.0
margin_right = 1216.0
margin_bottom = 263.0
size_flags_horizontal = 3

[node name="Label_blank2" type="Label" parent="VBoxContainer2"]
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_2" type="Label" parent="VBoxContainer2"]
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "player 2"
align = 1

[node name="Label_ready2" type="Label" parent="VBoxContainer2"]
visible = false
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "ready!"
align = 1

[node name="Label_Select2" type="Label" parent="VBoxContainer2"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1

[node name="Label_press_start2" type="Label" parent="VBoxContainer2"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 1220.0
margin_right = 1460.0
margin_bottom = 263.0
size_flags_horizontal = 3

[node name="Label_blank4" type="Label" parent="VBoxContainer4"]
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_4" type="Label" parent="VBoxContainer4"]
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "player 4"
align = 1

[node name="Label_ready4" type="Label" parent="VBoxContainer4"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "ready!"
align = 1

[node name="Label_Select4" type="Label" parent="VBoxContainer4"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1

[node name="Label_press_start4" type="Label" parent="VBoxContainer4"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer4"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer6" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 1464.0
margin_right = 1704.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank6" type="Label" parent="VBoxContainer6"]
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_6" type="Label" parent="VBoxContainer6"]
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "player 6"
align = 1

[node name="Label_ready6" type="Label" parent="VBoxContainer6"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "ready!"
align = 1

[node name="Label_Select6" type="Label" parent="VBoxContainer6"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1

[node name="Label_press_start6" type="Label" parent="VBoxContainer6"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer6"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer8" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 1708.0
margin_right = 1948.0
margin_bottom = 263.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_blank8" type="Label" parent="VBoxContainer8"]
margin_right = 240.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "            "
align = 1

[node name="Label_player_8" type="Label" parent="VBoxContainer8"]
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "player 8"
align = 1

[node name="Label_ready8" type="Label" parent="VBoxContainer8"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "ready!"
align = 1

[node name="Label_Select8" type="Label" parent="VBoxContainer8"]
visible = false
margin_top = 41.0
margin_right = 240.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1

[node name="Label_press_start8" type="Label" parent="VBoxContainer8"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 2 )
text = "Press Start"
align = 1

[node name="-" type="MarginContainer" parent="VBoxContainer8"]
margin_top = 123.0
margin_right = 240.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

